--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
     "@angular/router": "3.0.0-rc.2",
+    "@polymer/paper-input": "^0.0.3",
+    "@polymer/polymer": "^1.2.5-npm-test.2",
+    "@vaadin/angular2-polymer": "^1.0.0-beta4",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.11",
     "ts-helpers": "^1.1.1",
+    "webcomponents.js": "^0.7.22",
     "zone.js": "^0.6.17"
   },
   "devDependencies": {
